Fixed paths in WinPedia
Am I stupid? Do I have Alzheimer's? I forgot I used absolute paths in the WinPedia pages. It completely broke. Basically no images. Well,
- I fixed those paths after someone pointed it out.
- I worked further on the art.
- I also updated the `README.md`.

--- a/assets/WinPedia/Home/Homepage.html
+++ b/assets/WinPedia/Home/Homepage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta
@@ -14,24 +14,18 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="/src/WinPedia/Images/WinPedia-favicon.svg" />
+    <link rel="icon" href="../Images/WinPedia-favicon.svg" />
   </head>
   <body style="background-image: url(../Images/wallpaper/win11.jpg)">
     <header>
       <nav>
-        <img
-          src="/src/WinPedia/Images/WinPedia-logo.svg"
-          alt="logo"
-          height="70%"
-        />
+        <img src="../Images/WinPedia-logo.svg" alt="logo" height="70%" />
         <ul>
           <li class="nav">
-            <a href="/src/WinPedia/Home/Homepage.html" class="nav">Home</a>
+            <a href="../Home/Homepage.html" class="nav">Home</a>
           </li>
           <li class="nav">
-            <a href="/src/WinPedia/AboutMe/AboutMe.html" class="nav"
-              >About Me</a
-            >
+            <a href="../AboutMe/AboutMe.html" class="nav">About Me</a>
           </li>
         </ul>
       </nav>
@@ -43,7 +37,7 @@
           id="1_0"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/win1_0.jpg);
+            background-image: url(../Images/wallpaper/win1_0.jpg);
             background-size: cover;
           "
         >
@@ -56,7 +50,7 @@
           id="2_0"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/win2_0.png);
+            background-image: url(../Images/wallpaper/win2_0.png);
             background-size: cover;
           "
         >
@@ -69,7 +63,7 @@
           id="3_0"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/win3_0.png);
+            background-image: url(../Images/wallpaper/win3_0.png);
             background-size: cover;
           "
         >
@@ -82,7 +76,7 @@
           id="3_1"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/win3_1.png);
+            background-image: url(../Images/wallpaper/win3_1.png);
             background-size: cover;
           "
         >
@@ -95,7 +89,7 @@
           id="95"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/win95.png);
+            background-image: url(../Images/wallpaper/win95.png);
             background-size: cover;
           "
         >
@@ -108,7 +102,7 @@
           id="NT4_0"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/winNT4.0.png);
+            background-image: url(../Images/wallpaper/winNT4.0.png);
             background-size: cover;
             background-position: top right;
           "
@@ -122,7 +116,7 @@
           id="98"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/win98.jpg);
+            background-image: url(../Images/wallpaper/win98.jpg);
             background-size: cover;
           "
         >
@@ -135,7 +129,7 @@
           id="2000"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/win2000.png);
+            background-image: url(../Images/wallpaper/win2000.png);
             background-size: cover;
           "
         >
@@ -148,7 +142,7 @@
           id="ME"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/winME.png);
+            background-image: url(../Images/wallpaper/winME.png);
             background-size: cover;
           "
         >
@@ -161,7 +155,7 @@
           id="XP"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/winXP.jpg);
+            background-image: url(../Images/wallpaper/winXP.jpg);
             background-size: cover;
           "
         >
@@ -174,7 +168,7 @@
           id="Vista"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/winVista.jpg);
+            background-image: url(../Images/wallpaper/winVista.jpg);
             background-size: cover;
           "
         >
@@ -187,7 +181,7 @@
           id="7"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/win7.jpg);
+            background-image: url(../Images/wallpaper/win7.jpg);
             background-size: cover;
           "
         >
@@ -200,7 +194,7 @@
           id="8"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/win8.jpg);
+            background-image: url(../Images/wallpaper/win8.jpg);
             background-size: cover;
           "
         >
@@ -213,7 +207,7 @@
           id="8_1"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/win8_1.jpg);
+            background-image: url(../Images/wallpaper/win8_1.jpg);
             background-size: cover;
           "
         >
@@ -226,7 +220,7 @@
           id="10"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/win10.jpg);
+            background-image: url(../Images/wallpaper/win10.jpg);
             background-size: cover;
           "
         >
@@ -239,7 +233,7 @@
           id="11"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/win11.jpg);
+            background-image: url(../Images/wallpaper/win11.jpg);
             background-size: cover;
           "
         >
@@ -252,7 +246,7 @@
           id="Other2"
           class="winver"
           style="
-            background-image: url(/src/WinPedia/Images/wallpaper/win10x.png);
+            background-image: url(../Images/wallpaper/win10x.png);
             background-size: cover;
           "
         >
