--- a/assets/WinPedia/Home/Win3_1.html
+++ b/assets/WinPedia/Home/Win3_1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="Unicode" />
@@ -10,16 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="/src/WinPedia/Images/WinPedia-favicon.svg" />
+    <link rel="icon" href="../Images/WinPedia-favicon.svg" />
   </head>
   <body style="background-image: url(../Images/wallpaper/win3_1.png)">
     <header>
       <nav>
-        <img
-          src="/src/WinPedia/Images/WinPedia-logo.svg"
-          alt="logo"
-          height="70%"
-        />
+        <img src="../Images/WinPedia-logo.svg" alt="logo" height="70%" />
         <ul id="ul">
           <li class="li"><a href="./Homepage.html" class="nav">Home</a></li>
           <li class="li">
