--- a/assets/WinPedia/Home/Other.html
+++ b/assets/WinPedia/Home/Other.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="Unicode" />
     <link href="./fluentUIstyling.css" rel="stylesheet" />
+    <title>Other notable versions of WIndows - WinPedia</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="/src/WinPedia/Images/WinPedia-favicon.svg" />
+    <link rel="icon" href="../Images/WinPedia-favicon.svg" />
   </head>
   <body style="background-image: url(../Images/wallpaper/win10x.png)">
     <header>
