--- a/assets/WinPedia/Home/Win8_1.html
+++ b/assets/WinPedia/Home/Win8_1.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="Unicode" />
-    <title>WinPedia - Windows 8.1</title>
+    <title>Windows 8.1 - WinPedia</title>
     <link href="./fluentUIstyling.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="/src/WinPedia/Images/WinPedia-favicon.svg" />
+    <link rel="icon" href="../Images/WinPedia-favicon.svg" />
   </head>
   <body style="background-image: url(../Images/wallpaper/win8_1.jpg)">
     <header>
