--- a/assets/WinPedia/Home/WinNT4_0.html
+++ b/assets/WinPedia/Home/WinNT4_0.html
@@ -1,24 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="Unicode" />
     <link href="./fluentUIstyling.css" rel="stylesheet" />
+    <title>Windows NT 4.0 - WinPedia</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="/src/WinPedia/Images/WinPedia-favicon.svg" />
+    <link rel="icon" href="../Images/WinPedia-favicon.svg" />
   </head>
   <body style="background-image: url(../Images/wallpaper/winNT4.0.png)">
     <header>
       <nav>
-        <img
-          src="/src/WinPedia/Images/WinPedia-logo.svg"
-          alt="logo"
-          height="70%"
-        />
+        <img src="../Images/WinPedia-logo.svg" alt="logo" height="70%" />
         <ul>
           <li class="nav"><a href="./Homepage.html" class="nav">Home</a></li>
           <li class="nav">
